--- a/app/views/sophtron_items/select_existing_account.html.erb
+++ b/app/views/sophtron_items/select_existing_account.html.erb
@@ -8,8 +8,10 @@
           <%= t(".description") %>
         </p>
 
-        <form action="<%= link_existing_account_sophtron_items_path %>" method="post" class="space-y-4" data-turbo-frame="_top">
-          <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+        <%= form_with url: link_existing_account_sophtron_items_path,
+              method: :post,
+              class: "space-y-4",
+              data: { turbo_frame: "_top" } do %>
           <%= hidden_field_tag :account_id, @account.id %>
           <%= hidden_field_tag :return_to, @return_to %>
 
@@ -17,7 +19,10 @@
             <% @available_accounts.each do |account| %>
               <% has_blank_name = account[:account_name].blank? %>
               <label class="flex items-start gap-3 p-3 border <%= has_blank_name ? "border-error bg-error/5" : "border-primary" %> rounded-lg <%= has_blank_name ? "cursor-not-allowed opacity-60" : "hover:bg-subtle cursor-pointer" %> transition-colors">
-                <%= radio_button_tag "sophtron_account_id", account[:id], false, disabled: has_blank_name, class: "mt-1" %>
+                <%= radio_button_tag "sophtron_account_id", account[:id], false,
+                      required: true,
+                      disabled: has_blank_name,
+                      class: "mt-1" %>
                 <div class="flex-1">
                   <div class="font-medium text-sm <%= has_blank_name ? "text-error" : "text-primary" %>">
                     <% if has_blank_name %>
@@ -46,7 +51,7 @@
             <%= submit_tag t(".link_account"),
                 class: "inline-flex items-center gap-1 px-3 py-2 text-sm font-medium rounded-lg text-inverse bg-inverse hover:bg-inverse-hover disabled:button-bg-disabled" %>
           </div>
-        </form>
+        <% end %>
       </div>
     <% end %>
   <% end %>
