Revert "Add print stylesheet for reports page (#499)"
This reverts commit 7915fee62c31deca4bef9c2a963d0ea74a09b49e.

--- a/app/views/reports/_transactions_breakdown.html.erb
+++ b/app/views/reports/_transactions_breakdown.html.erb
@@ -1,6 +1,6 @@
 <div>
   <%# Export Controls %>
-  <div class="reports-print-hide flex items-center justify-end mb-4 flex-wrap gap-3">
+  <div class="flex items-center justify-end mb-4 flex-wrap gap-3">
     <%
       # Build params hash for links
       base_params = {
