--- a/app/views/reports/print.html.erb
+++ b/app/views/reports/print.html.erb
@@ -276,7 +276,7 @@
 
   <%# Transactions Breakdown Section %>
   <% if @transactions.any? %>
-    <section class="print-section">
+    <section class="print-section print-keep-together">
       <h2 class="print-section-title"><%= t("reports.transactions_breakdown.title") %></h2>
 
       <%
